kubernetes/juice-shop-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop-ingress
  namespace: devops-task
spec:
  ingressClassName: nginx
  rules:
    - host: juiceshop-devops-task.eastus.cloudapp.azure.com
      http:
        paths:
          - backend:
              service:
                name: juice-shop-svc
                port:
                  number: 8080
            pathType: Prefix
            path: /
